# lethe

./: .gitignore  AndroidManifest.xml  CLAUDE.md  Dockerfile.cm14-build  Dockerfile.nix  PRIVACY.md  README.md  REPRODUCIBLE.md  apply-overlays.sh  flake.nix  lethe-nlnet-draft.md  lethe-nlnet-form-answers.md  lethe-nlnet-form-skeleton.md  manifest.yaml  shell.nix
.claude/: settings.json
.githooks/: commit-msg  pre-commit
.github/: FUNDING.yml
agent/: Cargo.toml  build.sh
agent/.cargo/: config.toml
agent/src/: main.rs
agent/src/routes/: audio.rs  channels.rs  cluster.rs  device.rs  dms.rs  files.rs  llm.rs  mesh.rs  mod.rs  network.rs  packages.rs  peer.rs  remote_dms.rs  router.rs  shell.rs  state.rs  sysinfo.rs
bootanimation/: generate-bootanimation.py  generate-wallpaper.py
docs/: COMPLAN-v1.0.0.md  DEVICE-SECURITY.md  EU-AI-ACT-AUDIT.md  FEATURES.md  README.md  RELEASE-v1.0.0.md  SECURITY-ROADMAP.md  agent.yaml  boundaries.yaml  competitive-gaps.md  device-tiers.yaml  field-build.md  first-boot-wizard.yaml  mascot-layers.md  providers.yaml  secure-comms.md  warrant-canary.md
initrc/: init.lethe-agent.rc  init.lethe-burner.rc  init.lethe-cluster.rc  init.lethe-deadman.rc  init.lethe-ipfs.rc  init.lethe-p2p.rc  init.lethe-settings.rc  init.lethe-tor.rc
modules/: base.nix  legacy.nix
overlays/: burner-mode.conf  channels.conf  dead-mans-switch.conf  edgevpn.conf  firewall-rules.conf  hosts  ipfs-ota.conf  launcher.conf  mesh.conf  p2p.conf  privacy-defaults.conf  theme-lethe.conf  tor.conf
p2p/: build.sh  go.mod  go.sum  main.go
patches/: README.md
scripts/: Makefile  apply-field-build.py  apply-framework-patches.sh  build-all.sh  check-file-length.sh  code-quality-check.sh  fix-mixamo-hands.py  generate-ic-lethe.py  generate-ota.sh  generate-sbom.py  install-sepolicy.sh  lethe-channel-sync.sh  lethe-channels-init.sh  lethe-cluster.sh  lethe-ota-update.sh  lethe-resign.sh  setup-hooks.sh  sign-build.sh
sepolicy/: README.md  file_contexts  file_contexts.disabled-in-v1.0  lethe.te  lethe.te.disabled-in-v1.0  property_contexts  tor.te
static/: Breakdance 1990.fbx  (+65 more)
(+104 files in other folders)
